force-app/main/default/objects/Decodeur__c/Decodeur__c.object-meta.xml
<CustomObject>
    <label>Décodeur</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Nom de Décodeur</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Décodeurs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>