force-app/main/default/objects/Decodeur__c/fields/Abonnements__c.field-meta.xml
<CustomField>
    <fullName>Abonnements__c</fullName>
    <label>Abonnements</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>C+ 1 à 5 chaînes</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>C+ 6 chaînes</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Csat / Essentiel Famille</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Numéricâble</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>