force-app/main/default/objects/Decodeur__c/fields/Acces_Internet_reception__c.field-meta.xml
<CustomField>
    <fullName>Acces_Internet_reception__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accès à Internet réception</label>
    <type>Checkbox</type>
</CustomField>