force-app/main/default/objects/Decodeur__c/fields/Antenne_integree__c.field-meta.xml
<CustomField>
    <fullName>Antenne_integree__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Antenne intégrée</label>
    <type>Checkbox</type>
</CustomField>