force-app/main/default/objects/Decodeur__c/fields/ASS_EXTId_SIP__c.field-meta.xml
<CustomField>
    <fullName>ASS_EXTId_SIP__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>ASS_EXTId_SIPanel</label>
    <length>50</length>
    <type>Text</type>
</CustomField>