force-app/main/default/objects/Decodeur__c/fields/Audience_HD__c.field-meta.xml
<CustomField>
    <fullName>Audience_HD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Audience HD</label>
    <type>Checkbox</type>
</CustomField>