force-app/main/default/objects/Decodeur__c/fields/Fournisseur__c.field-meta.xml
<CustomField>
    <fullName>Fournisseur__c</fullName>
    <label>Fournisseur</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>ADSL</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Cable</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Hertzien</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Satellite</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>