force-app/main/default/objects/Decodeur__c/fields/Mode_de_reception__c.field-meta.xml
<CustomField>
    <fullName>Mode_de_reception__c</fullName>
    <label>Mode de réception</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hertzienne</fullName>
            </value>
            <value>
                <fullName>ADSL</fullName>
            </value>
            <value>
                <fullName>Câble</fullName>
            </value>
            <value>
                <fullName>Fibre optique</fullName>
            </value>
            <value>
                <fullName>Satellite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>