force-app/main/default/objects/Decodeur__c/fields/Poste__c.field-meta.xml
<CustomField>
    <fullName>Poste__c</fullName>
    <label>Poste</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Décodeurs</relationshipLabel>
    <relationshipName>Decodeurs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>