force-app/main/default/objects/Decodeur__c/fields/Type_de_decodeur__c.field-meta.xml
<CustomField>
    <fullName>Type_de_decodeur__c</fullName>
    <label>Type de décodeur</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Fournisseur__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>52</fullName>
                <label>Adaptateur TNT externe cable</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Adaptateur TNT externe hertzien</label>
            </value>
            <value>
                <fullName>53</fullName>
                <label>Adaptateur TNT intégré cable</label>
            </value>
            <value>
                <fullName>40</fullName>
                <label>Adaptateur TNT intégré hertzien</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>ALICE ADSL</label>
            </value>
            <value>
                <fullName>22</fullName>
                <label>AUCHAN ADSL</label>
            </value>
            <value>
                <fullName>31</fullName>
                <label>Autre décodeur TNT Payante</label>
            </value>
            <value>
                <fullName>23</fullName>
                <label>AUTRE FOURNISSEUR ADSL</label>
            </value>
            <value>
                <fullName>46</fullName>
                <label>AUTRE FOURNISSEUR CABLE ANALOGIQUE</label>
            </value>
            <value>
                <fullName>45</fullName>
                <label>AUTRE FOURNISSEUR CABLE NUMERIQUE</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>AUTRE FOURNISSEUR SATELLITE</label>
            </value>
            <value>
                <fullName>27</fullName>
                <label>BIS TV</label>
            </value>
            <value>
                <fullName>19</fullName>
                <label>BOUYGUES ADSL</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>CANALSAT/CANAL+ par SAT</label>
            </value>
            <value>
                <fullName>32</fullName>
                <label>CANALSAT/CANAL+ par TNT (SYSTER+)</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>DARTY ADSL</label>
            </value>
            <value>
                <fullName>33</fullName>
                <label>Décodeur collectif</label>
            </value>
            <value>
                <fullName>21</fullName>
                <label>FRANSAT</label>
            </value>
            <value>
                <fullName>42</fullName>
                <label>FRANSAT Collectif</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>FREE ADSL</label>
            </value>
            <value>
                <fullName>54</fullName>
                <label>FREEBOX REVOLUTION</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>NEUF SFR ADSL</label>
            </value>
            <value>
                <fullName>48</fullName>
                <label>NUMERICABLE ANALOGIQUE</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>NUMERICABLE NUMERIQUE</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>ORANGE ADSL</label>
            </value>
            <value>
                <fullName>28</fullName>
                <label>ORANGE SAT</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>TNTSAT</label>
            </value>
            <value>
                <fullName>41</fullName>
                <label>TNTSAT Collectif</label>
            </value>
            <value>
                <fullName>36</fullName>
                <label>TVNUM</label>
            </value>
            <value>
                <fullName>55</fullName>
                <label>VIRGIN ADSL</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>